Avoid catching exceptions unintentionally. Also user Integer.valueOf for performance instead of new Integer.